Bug 1606499 - Abort document on location.reload(). r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D89439